prodMetadata/src/objects/Give_Request_Guest__c.object
<CustomObject>
    <description>This object is used to capture information about the guests a member is bringing.</description>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Give_Request_Guests</relationshipLabel>
        <relationshipName>Give_Request_Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drivers_License__c</fullName>
        <description>Guest Drivers License</description>
        <inlineHelpText>Stores the Guest’s Drivers License Number.</inlineHelpText>
        <label>Drivers License #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Guest&apos;s First Name</description>
        <label>First Name</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Give_Id__c</fullName>
        <formula>Give_Request__r.Give_Instance__r.Give__r.Id</formula>
        <label>Give Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Give_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Give Request</label>
        <referenceTo>Give_Request__c</referenceTo>
        <relationshipLabel>Give_Request_Guests</relationshipLabel>
        <relationshipName>Give_Request_Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Guest&apos;s Last Name</description>
        <label>Last Name</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Stores the Guest’s Name.</description>
        <inlineHelpText>Stores the Guest’s Name.</inlineHelpText>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shirt_Size__c</fullName>
        <label>Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult – Small (S)</fullName>
                </value>
                <value>
                    <fullName>Adult – Medium (M)</fullName>
                </value>
                <value>
                    <fullName>Adult – Large (L)</fullName>
                </value>
                <value>
                    <fullName>Adult – Extra Large (XL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMP_Birthdate__c</fullName>
        <description>Temporary string birthdate</description>
        <label>TMP Birthdate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Give Request Guest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Give Request Guest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Give_Request_Guests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>